TAG: qcreports_db-4-3-4-2
DATE: 05/19/2010
STAFF: dbm
CHANGES:
1) TR10039; mgd/MRK_GOIEA.py; Changed shire to prodwww in URL
2) TR10039; mgd/MRK_GORCA.py; Changed shire to prodwww in URL
3) TR10039; mgd/MRK_NoGO.py; Changed shire to prodwww in URL

TAG: qcreports_db-4-3-4-1
DATE: 05/13/2010
STAFF: lec
CHANGES:
1) TR10601;mgd/GXD_Stats.py;added J:157819 to list of electronic reports

TAG: qcreports_db-4-3-3-6
DATE: 04/27/2010
STAFF: lec
CHANGES:
TR9777
1) qcr.html: added uniprotload; removed swissload

TAG: qcreports_db-4-3-3-5
DATE: 04/07/2010
STAFF: lec
CHANGES:
TR10136
2. Public JAX strains/Alleles used in Genotype/No Strain/Genotype Association
   (weekly/PRB_StrainJAX2.py)

3. JAX Strains w/ Genotype Associations where the Markers/Alleles of the 
   Strain record do not exactly match the Markers/Alleles of the Genotype record
   (mgd/PRB_StrainJAX3.py)

4. New JR##s created in the past week
   (weekly/PRB_StrainJAX4.sql==>weekly/PRB_StrainJAX7.sql)

5. JR##s with alleles added within the past week 
   (weekly/PRB_StrainJAX5.sql==>weekly/PRB_StrainJAX8.sql)

TAG: qcreports_db-4-3-3-4
DATE: 03/16/2010
STAFF: lec
CHANGES:
TR10126/ALL_NoPhenoRef.py,ALL_UncodedReference.py

TAG: qcreports_db-4-3-3-3
DATE: 03/10/2010
STAFF: lec
CHANGES:
TR10113/MGI_ComprehensiveMarkerSequence.py
  added fields 18 & 19

TAG: qcreports_db-4-3-3-2
DATE: 03/03/2010
STAFF: lec
CHANGES:
1) added goratload and gocfpload (not yet installed) to qcr.html

TAG: qcreports_db-4-3-3-1
DATE: 02/25/2010
STAFF: lec
CHANGES:
TR10035/goStats.sh;add J:155856 to orthology section

TAG: qcreports_db-4-3-2-11
TAG: qcreports_db-4-3-2-10
TAG: qcreports_db-4-3-2-9
DATE: 02/09/2010
STAFF: lec
CHANGES:
TR10023/ALL_UncodedReference.py
TR10024/ALL_NoPhenoRef.sql
added to qcr.html

TAG: qcreports_db-4-3-2-8
DATE: 02/02/2010
STAFF: lec
CHANGES:
TR10056/BIB_RefsToIndex.py

TAG: qcreports_db-4-3-2-7
DATE: 01/28/2010
STAFF: lec
CHANGES:
TR9612/GO_done.py, GO_done_newlit.py

TAG: qcreports_db-4-3-2-6
DATE: 01/28/2010